<resources>
    <string name="MIDP_CMGR_MENU_COMMAND">Options</string>
    <string name="MIDP_CMGR_SELECT_COMMAND">Select</string>
    <string name="MIDP_CMGR_CANCEL_COMMAND">Back</string>
    <string name="MIDP_CMGR_MENU_TITLE">Options</string>
    <string name="MIDP_CMGR_MENU_LONG_COMMAND">Command Menu</string>
    <string name="MIDP_CMGR_SELECT_LONG_COMMAND">Select Command</string>
    <string name="MIDP_CMGR_CANCEL_LONG_COMMAND">Cancel Command Menu</string>
    <string name="MIDP_INSTALL_STATUS_DOWNLOADING">Downloading...</string>
    <string name="MIDP_INSTALL_STATUS_INSTALLING">Installing...</string>
    <string name="MIDP_INSTALL_STATUS_PREPROCESSING_JAR">Preprocessing JAR</string>
    <string name="MIDP_PROGRESS_DECODING_IMAGE">Decoding Image</string>
    <string name="MIDP_DEEFAULT_INPUT_LABEL">Java input</string>
    <string name="MIDP_CMGR_BACK_COMMAND">Back</string>
    <string name="MIDP2_FWD_OK_COMMAND">OK</string>
    <string name="MIDP2_FWD_CANCEL_COMMAND">Cancel</string>
    <string name="MIDP2_FWD_DONE_COMMAND">Done</string>
    <string name="MIDP2_FORWARD_POPUP_COMMAND">Popup</string>
    <string name="MIDP2_FORWARD_DATEFIELD_COMMAND">Calendar</string>
    <string name="MIDP2_SELECT_LISTITEM_COMMAND">Select</string>
    <string name="MIDP2_DISMISS_COMMAND">Dismiss</string>
    <string name="MIDP2_7">reserved</string>
    <string name="MIDP2_8">reserved</string>
    <string name="MIDP2_9">reserved</string>
    <string name="MIDP2_CLEAR_TEXTFIELD_COMMAND">Clear Text</string>
    <string name="MIDP2_BACKSPACE_TEXTFIELD_COMMAND">Backspace</string>
    <string name="MIDP2_TOGGLECASE_TEXTFIELD_COMMAND">Toggle Case</string>
    <string name="MIDP2_SYMBOLS_TEXTFIELD_COMMAND">Insert Symbols</string>
    <string name="MIDP2_ADD_CHARACTER_TEXTFIELD_COMMAND">Add Symbol</string>
    <string name="MIDP2_15">reserved</string>
    <string name="MIDP2_16">reserved</string>
    <string name="MIDP2_17">reserved</string>
    <string name="MIDP2_18">reserved</string>
    <string name="MIDP2_19">reserved</string>
    <string name="MIDP2_HOUR_LABEL">Hour</string>
    <string name="MIDP2_MINUTE_LABEL">Min</string>
    <string name="MIDP2_DAY_VERY_SHORT_SUN">S</string>
    <string name="MIDP2_DAY_VERY_SHORT_MON">M</string>
    <string name="MIDP2_DAY_VERY_SHORT_TUE">T</string>
    <string name="MIDP2_DAY_VERY_SHORT_WED">W</string>
    <string name="MIDP2_DAY_VERY_SHORT_THU">T</string>
    <string name="MIDP2_DAY_VERY_SHORT_FRI">F</string>
    <string name="MIDP2_DAY_VERY_SHORT_SAT">S</string>
    <string name="MIDP2_29">reserved</string>
    <string name="MIDP2_MONTH_SHORT_JANUARY">Jan</string>
    <string name="MIDP2_MONTH_SHORT_FEBRUARY">Feb</string>
    <string name="MIDP2_MONTH_SHORT_MARCH">Mar</string>
    <string name="MIDP2_MONTH_SHORT_APRIL">Apr</string>
    <string name="MIDP2_MONTH_SHORT_MAY">May</string>
    <string name="MIDP2_MONTH_SHORT_JUNE">Jun</string>
    <string name="MIDP2_MONTH_SHORT_JULY">Jul</string>
    <string name="MIDP2_MONTH_SHORT_AUGUST">Aug</string>
    <string name="MIDP2_MONTH_SHORT_SEPTEMBER">Sep</string>
    <string name="MIDP2_MONTH_SHORT_OCTOBER">Oct</string>
    <string name="MIDP2_MONTH_SHORT_NOVEMBER">Nov</string>
    <string name="MIDP2_MONTH_SHORT_DECEMBER">Dec</string>
    <string name="MIDP2_42">reserved</string>
    <string name="MIDP2_DOMAIN_MIDP1">midp1</string>
    <string name="MIDP2_DOMAIN_UNTRUSTED">untrusted</string>
    <string name="MIDP2_DOMAIN_TRUSTED_3RD_PARTY">trusted</string>
    <string name="MIDP2_DOMAIN_OPERATOR">operator</string>
    <string name="MIDP2_DOMAIN_MANUFACTURER">manufacturer</string>
    <string name="AMS_MENU_COMMAND">Menu</string>
    <string name="AMS_SAVE_COMMAND">Save</string>
    <string name="AMS_ABOUT_COMMAND">About</string>
    <string name="AMS_EXIT_COMMAND">Exit</string>
    <string name="AMS_CANCEL_COMMAND">Cancel</string>
    <string name="AMS_BACK_COMMAND">Back</string>
    <string name="AMS_STOP_COMMAND">Stop</string>
    <string name="AMS_NEXT_COMMAND">Next</string>
    <string name="AMS_GO_COMMAND">Go</string>
    <string name="AMS_OK_COMMAND">OK</string>
    <string name="AMS_DONE_COMMAND">Done</string>
    <string name="AMS_EDIT_COMMAND">Edit</string>
    <string name="AMS_ADD_COMMAND">Add</string>
    <string name="AMS_YES_COMMAND">Yes</string>
    <string name="AMS_NO_COMMAND">No</string>
    <string name="AMS_CONTINUE_COMMAND">Continue</string>
    <string name="AMS_NONE_LABEL">&lt;None&gt;</string>
    <string name="AMS_LAUNCH_COMMAND">Launch</string>
    <string name="AMS_INSTALL_FORM_COMMAND">Install</string>
    <string name="AMS_INSTALL_COMMAND">Internet</string>
    <string name="AMS_SETTINGS_COMMAND">Settings</string>
    <string name="AMS_INFO_COMMAND">Info</string>
    <string name="AMS_REMOVE_COMMAND">Remove</string>
    <string name="AMS_UPDATE_COMMAND">Update</string>
    <string name="AMS_OPTIONS_COMMAND">Permissions</string>
    <string name="AMS_RENAME_COMMAND">Rename</string>
    <string name="AMS_KILL_COMMAND">Kill</string>
    <string name="AMS_PAUSE_COMMAND">Pause</string>
    <string name="AMS_COPY_COMMAND">Copy</string>
    <string name="AMS_WAIT_COMMAND">Wait</string>
    <string name="AMS_NEWFOLD_COMMAND">Create Folder</string>
    <string name="AMS_NEWFOLD_COMMAND_SHORT">Create Folder</string>
    <string name="AMS_UP_COMMAND">Up</string>
    <string name="AMS_SELECT_MOVE_COMMAND">Select For Move</string>
    <string name="AMS_MOVE_COMMAND">Move to Folder</string>
    <string name="AMS_CANT_REMOVE_NONEMPTY_FOLDER">Folder is not empty, can not delete</string>
    <string name="AMS_CANT_MOVE_MIDLET">Can\'t move single MIDlet, only for the whole MIDlet suites</string>
    <string name="AMS_CANT_MOVE_SELF_INTO_CHILD">Can\'t move folder into subfolder</string>
    <string name="AMS_CANT_REMOVE_FOLDER">This folder is factory installed, and cannot be removed</string>
    <string name="AMS_CANT_MOVE_FOLDER">This folder is factory installed, and cannot be moved</string>
    <string name="AMS_CANT_RENAME_FOLDER">This folder is factory installed, and cannot be renamed</string>
    <string name="AMS_NEW_FOLDER_NAME">Folder</string>
    <string name="AMS_42">reserved</string>
    <string name="AMS_43">reserved</string>
    <string name="AMS_44">reserved</string>
    <string name="AMS_LOCAL_FILES_INSTALLED">Select File</string>
    <string name="AMS_BROWSE_COMMAND">SD card</string>
    <string name="AMS_47">reserved</string>
    <string name="AMS_WARNING">Warning</string>
    <string name="AMS_ERROR">Error</string>
    <string name="AMS_INFO">Info</string>
    <string name="AMS_SIZE">Size</string>
    <string name="AMS_VERSION">Version</string>
    <string name="AMS_VENDOR">Vendor</string>
    <string name="AMS_EXPIRY_TIME">Expiry Time</string>
    <string name="AMS_EXPIRY_COUNT">Expiry Count</string>
    <string name="AMS_CONTENTS">Name</string>
    <string name="AMS_WEBSITE">Add Website</string>
    <string name="AMS_CANCELLED">Cancelled</string>
    <string name="AMS_DOMAIN">Domain: %1$s %2$s, %1$s domain %2$s (signed)</string>
    <string name="AMS_SIGNED">(signed)</string>
    <string name="AMS_PUSHED_CONTENT">Pushed Content</string>
    <string name="AMS_AMS_COPYRIGHT_SHORT">Copyright 1998-2009 Myriad Group AG.\nCopyright 2000-2001 Sun Microsystems Inc. All Rights Reserved.</string>
    <string name="AMS_AMS_COPYRIGHT">Myriad Group, Jbed, Jcap, Jeco, FastBCC, FastDAC, HostBCC and u@ are trademarks or registered trademarks of Myriad Group AG.\n\nCopyright 0251 1998-2009 Myriad Group AG.\n\nCopyright 0251 2000-2001 Sun Microsystems Inc.\n\nJava and all Java-based marks are trademarks or registered trademarks of Sun Microsystems, Inc. Myriad Group is independent of, and in no manner legally affiliated with, Sun Microsystems, Inc. except as a licensee.\n\nAll rights reserved for all marks. All use is subject to license terms. For more information please go to &lt;www.myriadgroup.com&gt;.\n\nJbed Advanced (with FastBCC) is protected by U.S. Pat. Nos: 6,964,039; 6,978,451.\n</string>
    <string name="AMS_MISSING_INFO">%1$s cannot be installed because critical information is missing from the application file (%3$s).</string>
    <string name="AMS_OPEN_COMMAND">Open</string>
    <string name="AMS_66">reserved</string>
    <string name="AMS_INFO_MISMATCH">%1$s cannot be installed because critical information between the website and the application file does not match.</string>
    <string name="AMS_UPDATE_NEWER_VERSION">A newer version of %1$s is already installed on this device. Do you want to replace the newer version?</string>
    <string name="AMS_UPDATE_OLDER_VERSION">An older version of %1$s is already installed on this device. Do you want to update the older version?</string>
    <string name="AMS_UPDATE_SAME_VERSION">No newer version . Do you want to re-install the same version?</string>
    <string name="AMS_FORBIDDEN_UPDATE">A trusted version of %1$s is already installed on this device. It cannot be upgraded with an untrusted version.</string>
    <string name="AMS_JAD_NOT_FOUND">%1$s cannot be found at this URL.</string>
    <string name="AMS_JAR_NOT_FOUND">The archive file (.jar) for %1$s cannot be found at its URL.</string>
    <string name="AMS_INVALID_INFO">%1$s cannot be installed because critical information is not formatted correctly and is invalid.</string>
    <string name="AMS_INSUFFICIENT_STORAGE">There is not enough room to install %1$s (%3$sK is needed for installation). Try removing other items to free up space.</string>
    <string name="AMS_INVALID_JAR_TYPE">Incorrect type (%3$s) returned for archive file of %1$s</string>
    <string name="AMS_INVALID_JAD_TYPE">Incorrect type (%3$s) returned for application file of %1$s</string>
    <string name="AMS_CORRUPT_JAR">The archive file (.jar) for %1$s appears to be corrupt.</string>
    <string name="AMS_JAD_MOVED">The new version of %1$s is not from the same provider as the old version. The download URLs do not match. Do you want to install the new version?\n\nOld URL: %3$s\nNew URL: %2$s</string>
    <string name="AMS_UNSUPPORTED_AUTH">The server has requested an authentication of the user with a scheme that this device does not support.</string>
    <string name="AMS_DEVICE_INCOMPATIBLE">%1$s is not designed to work with this phone and cannot be installed.</string>
    <string name="AMS_INTERNAL_INSTALLER_ERROR">The installer has encountered an unexpected error (%1$s)</string>
    <string name="AMS_ABOUT_COMMAND_SHORT">About</string>
    <string name="AMS_EXIT_COMMAND_SHORT">Exit</string>
    <string name="AMS_LAUNCH_COMMAND_SHORT">Launch</string>
    <string name="AMS_INSTALL_COMMAND_SHORT">Internet</string>
    <string name="AMS_INFO_COMMAND_SHORT">Info</string>
    <string name="AMS_REMOVE_COMMAND_SHORT">Remove</string>
    <string name="AMS_UPDATE_COMMAND_SHORT">Update</string>
    <string name="AMS_OPTIONS_COMMAND_SHORT">Permissions</string>
    <string name="AMS_RENAME_COMMAND_SHORT">Rename</string>
    <string name="AMS_MOVE_COMMAND_SHORT">Move</string>
    <string name="AMS_BROWSE_COMMAND_SHORT">SD card</string>
    <string name="AMS_REMOVE_ALL_COMMAND_SHORT">Remove All</string>
    <string name="AMS_MANAGE_CERTIFICATES_COMMAND_SHORT">Certificates</string>
    <string name="AMS_TASKS_COMMAND_SHORT">Tasks</string>
    <string name="PRJ_SORT">Sort</string>
    <string name="PRJ_SORT_BY_NAME">Sort by name</string>
    <string name="PRJ_SORT_BY_SIZE">Sort by size</string>
    <string name="PRJ_SORT_BY_TIME">Sort by date</string>
    <string name="PRJ_APN_SETTING">APN settings</string>
    <string name="PRJ_ROTATE_COMMAND">Rotate</string>
    <string name="PRJ_STORAGE_SETTING">Storage Setting</string>
    <string name="PRJ_REMOVE_MULTIPLE_COMMAND_SHORT">Delete</string>
    <string name="PRJ_SEND_INFO_COMMAND_SHORT">Send info</string>
</resources>