<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/screen_menu">
        <item
            android:icon="@drawable/menu_up"
            android:id="@+id/up_folder_item"
            android:orderInCategory="0"
            android:title="@string/AMS_UP_COMMAND"/>
        <item
            android:icon="@drawable/menu_local"
            android:id="@+id/local_install_menu_item"
            android:orderInCategory="0"
            android:title="@string/AMS_BROWSE_COMMAND_SHORT"/>
        <item
            android:icon="@drawable/menu_internet"
            android:id="@+id/install_menu_item"
            android:orderInCategory="1"
            android:title="@string/AMS_INSTALL_COMMAND_SHORT"/>
        <item
            android:icon="@drawable/menu_running"
            android:id="@+id/tasks_menu_item"
            android:orderInCategory="97"
            android:title="@string/AMS_TASKS_COMMAND_SHORT"/>
        <item
            android:id="@+id/remove_multiple_menu_item"
            android:orderInCategory="100"
            android:title="@string/PRJ_REMOVE_MULTIPLE_COMMAND_SHORT"/>
        <item
            android:id="@+id/create_folder_item"
            android:orderInCategory="1000"
            android:title="@string/AMS_NEWFOLD_COMMAND_SHORT"/>
        <item
            android:id="@+id/list_certificates_item"
            android:orderInCategory="2000"
            android:title="@string/AMS_MANAGE_CERTIFICATES_COMMAND_SHORT"/>
        <item
            android:id="@+id/apn_menu_item"
            android:orderInCategory="2000"
            android:title="@string/PRJ_APN_SETTING"/>
        <item
            android:id="@+id/rotate_menu_item"
            android:orderInCategory="2000"
            android:title="@string/PRJ_ROTATE_COMMAND"/>
        <item
            android:id="@+id/storage_setting_item"
            android:orderInCategory="2000"
            android:title="@string/PRJ_STORAGE_SETTING"/>
        <item
            android:id="@+id/about_menu_item"
            android:orderInCategory="10000"
            android:title="@string/AMS_ABOUT_COMMAND_SHORT"/>
        <item
            android:id="@+id/exit_menu_item"
            android:orderInCategory="10001"
            android:title="@string/AMS_EXIT_COMMAND_SHORT"/>
    </group>
    <group android:id="@+id/screen_no_empty_menu">
        <item
            android:id="@+id/remove_all_menu_item"
            android:orderInCategory="100"
            android:title="@string/AMS_REMOVE_ALL_COMMAND_SHORT"/>
        <item
            android:id="@+id/sort_menu_item"
            android:orderInCategory="1000"
            android:title="@string/PRJ_SORT">
            <menu>
                <item
                    android:id="@+id/sort_by_name_menu_item"
                    android:title="@string/PRJ_SORT_BY_NAME"/>
                <item
                    android:id="@+id/sort_by_reverse_name_menu_item"
                    android:visible="false"/>
                <item
                    android:id="@+id/sort_by_size_menu_item"
                    android:title="@string/PRJ_SORT_BY_SIZE"/>
                <item
                    android:id="@+id/sort_by_time_menu_item"
                    android:title="@string/PRJ_SORT_BY_TIME"/>
            </menu>
        </item>
    </group>
    <group android:id="@+id/item_menu">
        <item
            android:icon="@drawable/ic_menu_rename"
            android:id="@+id/rename_item"
            android:orderInCategory="1000"
            android:title="@string/AMS_RENAME_COMMAND_SHORT"/>
        <item
            android:icon="@drawable/ic_menu_move"
            android:id="@+id/move_to_folder_item"
            android:orderInCategory="1000"
            android:title="@string/AMS_MOVE_COMMAND_SHORT"/> /&gt;\10
        <item
            android:icon="@drawable/menu_launch"
            android:id="@+id/run_menu_item"
            android:orderInCategory="98"
            android:title="@string/AMS_LAUNCH_COMMAND_SHORT"/>
        <item
            android:icon="@drawable/menu_delete"
            android:id="@+id/remove_menu_item"
            android:orderInCategory="3"
            android:title="@string/AMS_REMOVE_COMMAND_SHORT"/>
        <item
            android:icon="@drawable/menu_info"
            android:id="@+id/info_menu_item"
            android:orderInCategory="2"
            android:title="@string/AMS_INFO_COMMAND_SHORT"/>
        <item
            android:id="@+id/permission_menu_item"
            android:orderInCategory="1000"
            android:title="@string/AMS_OPTIONS_COMMAND_SHORT"/>
        <item
            android:id="@+id/update_menu_item"
            android:orderInCategory="1000"
            android:title="@string/AMS_UPDATE_COMMAND_SHORT"/>
        <item
            android:id="@+id/send_info_menu_item"
            android:visible="false"
            android:orderInCategory="1000"
            android:title="@string/PRJ_SEND_INFO_COMMAND_SHORT"/>
    </group>
</menu>
